--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -42,6 +42,8 @@
   
   <script src="src/app/tests/spec/SpecCurrentLocation.js"></script>
   
+  <script src="src/app/tests/spec/SpecLayers.js"></script>
+  
   <script src="src/app/tests/spec/SpecjsReporterSanitizer.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
