--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -44,6 +44,8 @@
   
   <script src="src/app/tests/spec/SpecLayers.js"></script>
   
+  <script src="src/app/tests/spec/SpecSearch.js"></script>
+  
   <script src="src/app/tests/spec/SpecjsReporterSanitizer.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
