--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="TODO" />
 
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
+    <link rel="stylesheet" href="app/resources/App.css">
 </head>
 <body>
     <div data-dojo-type='app/App'></div>
