--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -46,6 +46,8 @@
   
   <script src="src/app/tests/spec/SpecSearch.js"></script>
   
+  <script src="src/app/tests/spec/Spec_mapController.js"></script>
+  
   <script src="src/app/tests/spec/SpecjsReporterSanitizer.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
