Group and individual lyrs symbolized and togglable
Related to #3 & #4

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -42,6 +42,10 @@
   
   <script src="src/app/tests/spec/SpecCurrentLocation.js"></script>
   
+  <script src="src/app/tests/spec/SpecGroup.js"></script>
+  
+  <script src="src/app/tests/spec/SpecLayer.js"></script>
+  
   <script src="src/app/tests/spec/SpecLayers.js"></script>
   
   <script src="src/app/tests/spec/SpecSearch.js"></script>
