Added transparency slider.
Closes #3 & #4.

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -50,6 +50,8 @@
   
   <script src="src/app/tests/spec/SpecSearch.js"></script>
   
+  <script src="src/app/tests/spec/SpecSlider.js"></script>
+  
   <script src="src/app/tests/spec/Spec_mapController.js"></script>
   
   <script src="src/app/tests/spec/SpecjsReporterSanitizer.js"></script>
