just want to kick off another build

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -48,6 +48,8 @@
   
   <script src="src/app/tests/spec/SpecLayers.js"></script>
   
+  <script src="src/app/tests/spec/SpecReport.js"></script>
+  
   <script src="src/app/tests/spec/SpecSearch.js"></script>
   
   <script src="src/app/tests/spec/SpecSlider.js"></script>
