--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
-<body>
+<body class='claro'>
     <div data-dojo-type='app/App'></div>
 
     <!-- build:template
