--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -42,6 +42,8 @@
   
   <script src="src/app/tests/spec/SpecCurrentLocation.js"></script>
   
+  <script src="src/app/tests/spec/SpecFindAddress.js"></script>
+  
   <script src="src/app/tests/spec/SpecGroup.js"></script>
   
   <script src="src/app/tests/spec/SpecLayer.js"></script>
