--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,11 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.0.2 <small>Mar 6, 2015</small></h2>
+    <ul>
+        <li>Better formatting and column alignment in report (<a href='https://github.com/agrc/bb-econ/issues/69'>#69</a>).</li>
+        <li>Moved search bar all of the way to the right of the page (<a href='https://github.com/agrc/bb-econ/issues/66'>#66</a>).</li>
+    </ul>
     <h2>1.0.1 <small>Feb 23, 2015</small></h2>
     <ul>
         <li>Fixed bug that was causing a limited number of features to display for the "Heavy Rail" layer at courser scales (<a href='https://github.com/agrc/bb-econ/issues/65'>#65</a>).</li>
