--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,13 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.1.0 <small>Apr 7, 2015</small></h2>
+    <ul>
+        <li>Converted to full screen layout (<a href='https://github.com/agrc/bb-econ/issues/67'>#67</a>).</li>
+        <li>Updated the text in the tooltip for the "Ask an expert!" icon (<a href='https://github.com/agrc/bb-econ/issues/72'>#72</a>).</li>
+        <li>Updated the logo (<a href='https://github.com/agrc/bb-econ/issues/73'>#73</a>).</li>
+        <li>Added "hamburger" icon for smaller devices (<a href='https://github.com/agrc/bb-econ/issues/64'>#64</a>).</li>
+    </ul>
     <h2>1.0.2 <small>Mar 6, 2015</small></h2>
     <ul>
         <li>Better formatting and column alignment in report (<a href='https://github.com/agrc/bb-econ/issues/69'>#69</a>).</li>
