Preserve selected layers via url parameters
Closes #75

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -52,6 +52,8 @@
   
   <script src="src/app/tests/spec/SpecReport.js"></script>
   
+  <script src="src/app/tests/spec/SpecRouter.js"></script>
+  
   <script src="src/app/tests/spec/SpecSearch.js"></script>
   
   <script src="src/app/tests/spec/SpecSlider.js"></script>
