--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,14 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.2.0 <small>Apr 13, 2015</small></h2>
+    <ul>
+        <li>Added Front Runner lines and stations to Commuter Rail layer (<a href='https://github.com/agrc/bb-econ/issues/68'>#68</a>).</li>
+        <li>Reordered columns for broadband provider tables in report to help with column alignment (<a href='https://github.com/agrc/bb-econ/issues/69'>#69</a>).</li>
+        <li>Added "Natural Gas" as it's own section in the report (<a href='https://github.com/agrc/bb-econ/issues/70'>#70</a>).</li>
+        <li>Set all broadband layers to be on by default (<a href='https://github.com/agrc/bb-econ/issues/71'>#71</a>).</li>
+        <li>Layer visibility and map extent are now preserved via URL parameters (<a href='https://github.com/agrc/bb-econ/issues/75'>#75</a>).</li>
+    </ul>
     <h2>1.1.0 <small>Apr 7, 2015</small></h2>
     <ul>
         <li>Converted to full screen layout (<a href='https://github.com/agrc/bb-econ/issues/67'>#67</a>).</li>
