--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,19 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.3.0 <small>Apr 24, 2015</small></h2>
+    <ul>
+        <li>Improved layout for landscape phones (<a href='https://github.com/agrc/bb-econ/issues/81'>#81</a>).</li>
+        <li>Removed duplicate fiber providers in report (<a href='https://github.com/agrc/bb-econ/issues/80'>#80</a>).</li>
+        <li>Fixed bug preventing the "Enterprise Zones" checkbox from showing as disabled in built version (<a href='https://github.com/agrc/bb-econ/issues/79'>#79</a>).</li>
+        <li>Added code to track reports, and layer toggling in Google Analytics (<a href='https://github.com/agrc/bb-econ/issues/74'>#74</a>).</li>
+        <li>Fixed the footer layout in report (<a href='https://github.com/agrc/bb-econ/issues/77'>#77</a>).</li>
+        <li>Removed name & email from other broadband providers in report (<a href='https://github.com/agrc/bb-econ/issues/69'>#69</a>).</li>
+    </ul>
+    <h2>1.2.1 <small>Apr 14, 2015</small></h2>
+    <ul>
+        <li>Fixed bug in Firefox preventing linked checkboxes from working.</li>
+    </ul>
     <h2>1.2.0 <small>Apr 13, 2015</small></h2>
     <ul>
         <li>Added Front Runner lines and stations to Commuter Rail layer (<a href='https://github.com/agrc/bb-econ/issues/68'>#68</a>).</li>
