--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,11 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.3.1 <small>May 12, 2015</small></h2>
+    <ul>
+        <li>Changed "Fiber" and "All Non-Mobile Broadband..." layers to cached layers to help with performance (<a href='https://github.com/agrc/bb-econ/issues/86'>#86</a>).</li>
+        <li>Temporarily remove the base map selector (<a href='https://github.com/agrc/bb-econ/issues/87'>#87</a>).</li>
+    </ul>
     <h2>1.3.0 <small>Apr 24, 2015</small></h2>
     <ul>
         <li>Improved layout for landscape phones (<a href='https://github.com/agrc/bb-econ/issues/81'>#81</a>).</li>
