--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,10 @@
 	<h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.5.0 <small>Jun 16, 2015</small></h2>
+    <ul>
+        <li>Added enterprise zone data (<a href='https://github.com/agrc/bb-econ/issues/89'>#89</a>).</li>
+    </ul>
     <h2>1.4.0 <small>Jun 15, 2015</small></h2>
     <ul>
         <li>Added labels for polygons (<a href='https://github.com/agrc/bb-econ/issues/82'>#82</a>).</li>
