--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Economic Development</title>
+    <title>Economic Development</title>
     <link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css"/>
 
     <style type="text/css">
@@ -11,13 +11,24 @@
     </style>
 </head>
 <body>
-	<h1>Economic Development Change Log</h1>
+    <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.6.0 <small>Jul 7, 2016</small></h2>
+    <ul>
+        <li>Changed "Heavy Rail" to "Freight Rail" (<a href='https://github.com/agrc/bb-econ/issues/99'>#99</a>).</li>
+        <li>Added natural gas providers other than Questar (<a href='https://github.com/agrc/bb-econ/issues/95'>#95</a>).</li>
+        <li>Center title in header (<a href='https://github.com/agrc/bb-econ/issues/98'>#98</a>).</li>
+        <li>Added federal land layers (<a href='https://github.com/agrc/bb-econ/issues/97'>#97</a>).</li>
+        <li>Ported nightly script to forklift pallet (<a href='https://github.com/agrc/bb-econ/issues/101'>#101</a>).</li>
+        <li>Switch to web mercator (<a href='https://github.com/agrc/bb-econ/issues/100'>#100</a>).</li>
+        <li>Added workforce service centers (<a href='https://github.com/agrc/bb-econ/issues/93'>#93</a>).</li>
+        <li>Added business resource centers (<a href='https://github.com/agrc/bb-econ/issues/92'>#92</a>).</li>
+    </ul>
     <h2>1.5.1 <small>Sep 11, 2015</small></h2>
-	<ul>
-		<li>Added "Utah" to the title of the app.</li>
-	</ul>
+    <ul>
+        <li>Added "Utah" to the title of the app.</li>
+    </ul>
     <h2>1.5.0 <small>Jun 16, 2015</small></h2>
     <ul>
         <li>Added enterprise zone data (<a href='https://github.com/agrc/bb-econ/issues/89'>#89</a>).</li>
