begin sure sites

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -62,6 +62,8 @@
   
   <script src="src/app/tests/spec/SpecSlider.js"></script>
   
+  <script src="src/app/tests/spec/SpecSureSites.js"></script>
+  
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
 
