stop loading css via xstyle amd plugin

--- a/src/report.html
+++ b/src/report.html
@@ -11,6 +11,9 @@
     <meta name="description" content="TODO" />
     <meta name="keywords" content="TODO" />
 
+    <link rel="stylesheet" href="app/resources/App.css">
+    <link rel="stylesheet" href="app/resources/Report.css">
+
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
 <body>
