--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="TODO" />
     <meta name="keywords" content="TODO" />
 
+    <link rel="stylesheet" href="app/resources/App.css">
+
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
 <body class='claro'>
