--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -14,6 +14,10 @@
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
     <a href="https://github.com/agrc/bb-econ/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.6.1 <small>Feb 14, 2017</small></h2>
+    <ul>
+        <li>Fixed bug preventing old URL's with UTM coordinates from zooming the map to the correct extent (<a href='https://github.com/agrc/ironing-board/issues/114'>#114</a>).</li>
+    </ul>
     <h2>1.6.0 <small>Jul 7, 2016</small></h2>
     <ul>
         <li>Changed "Heavy Rail" to "Freight Rail" (<a href='https://github.com/agrc/bb-econ/issues/99'>#99</a>).</li>
