update changelog for 1.7.0-1 release

--- a/src/ChangeLog.html
+++ b/src/ChangeLog.html
@@ -13,24 +13,31 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
-    <a href="https://github.com/agrc/ironing-board/issues?state=open" class="btn btn-default">Open Issues</a>
+    <h2>1.7.0-1 <small>Feb 17, 2017</small></h2>
+    <ul>
+        <li>Build script to harvest SURE Sites data on a weekly basis.</li>
+        <li>Replace "Sure Sites" text with logo in group header.</li>
+        <li>Make all groups closed by default.</li>
+        <li>Improve layout between SURE Sites and Broadband groups.</li>
+        <li>Wire up SURE Sites filters to points on the map.</li>
+    </ul>
     <h2>1.7.0-0 <small>Dec 23, 2016</small></h2>
     <ul>
-        <li>Add address points as base map overlay option (<a href='https://github.com/agrc/ironing-board/issues/104'>#104</a>).</li>
-        <li>Add orange marker to "Current Location" box (<a href='https://github.com/agrc/ironing-board/issues/103'>#103</a>).</li>
-        <li>Initial fleshing out of Sure Sites group and controls (<a href='https://github.com/agrc/ironing-board/issues/107'>#107</a>).</li>
-        <li>Add city search box on map (<a href='https://github.com/agrc/ironing-board/issues/108'>#108</a>).</li>
+        <li>Add address points as base map overlay option.</li>
+        <li>Add orange marker to "Current Location" box.</li>
+        <li>Initial fleshing out of Sure Sites group and controls.</li>
+        <li>Add city search box on map.</li>
     </ul>
     <h2>1.6.0 <small>Jul 7, 2016</small></h2>
     <ul>
-        <li>Changed "Heavy Rail" to "Freight Rail" (<a href='https://github.com/agrc/ironing-board/issues/99'>#99</a>).</li>
-        <li>Added natural gas providers other than Questar (<a href='https://github.com/agrc/ironing-board/issues/95'>#95</a>).</li>
-        <li>Center title in header (<a href='https://github.com/agrc/ironing-board/issues/98'>#98</a>).</li>
-        <li>Added federal land layers (<a href='https://github.com/agrc/ironing-board/issues/97'>#97</a>).</li>
-        <li>Ported nightly script to forklift pallet (<a href='https://github.com/agrc/ironing-board/issues/101'>#101</a>).</li>
-        <li>Switch to web mercator (<a href='https://github.com/agrc/ironing-board/issues/100'>#100</a>).</li>
-        <li>Added workforce service centers (<a href='https://github.com/agrc/ironing-board/issues/93'>#93</a>).</li>
-        <li>Added business resource centers (<a href='https://github.com/agrc/ironing-board/issues/92'>#92</a>).</li>
+        <li>Changed "Heavy Rail" to "Freight Rail".</li>
+        <li>Added natural gas providers other than Questar.</li>
+        <li>Center title in header.</li>
+        <li>Added federal land layers.</li>
+        <li>Ported nightly script to forklift pallet.</li>
+        <li>Switch to web mercator.</li>
+        <li>Added workforce service centers.</li>
+        <li>Added business resource centers.</li>
     </ul>
     <h2>1.5.1 <small>Sep 11, 2015</small></h2>
     <ul>
@@ -38,26 +45,26 @@
     </ul>
     <h2>1.5.0 <small>Jun 16, 2015</small></h2>
     <ul>
-        <li>Added enterprise zone data (<a href='https://github.com/agrc/ironing-board/issues/89'>#89</a>).</li>
+        <li>Added enterprise zone data.</li>
     </ul>
     <h2>1.4.0 <small>Jun 15, 2015</small></h2>
     <ul>
-        <li>Added labels for polygons (<a href='https://github.com/agrc/ironing-board/issues/82'>#82</a>).</li>
-        <li>Updated drive times (<a href='https://github.com/agrc/ironing-board/issues/90'>#90</a>).</li>
+        <li>Added labels for polygons.</li>
+        <li>Updated drive times.</li>
     </ul>
     <h2>1.3.1 <small>May 12, 2015</small></h2>
     <ul>
-        <li>Changed "Fiber" and "All Non-Mobile Broadband..." layers to cached layers to help with performance (<a href='https://github.com/agrc/ironing-board/issues/86'>#86</a>).</li>
-        <li>Temporarily remove the base map selector (<a href='https://github.com/agrc/ironing-board/issues/87'>#87</a>).</li>
+        <li>Changed "Fiber" and "All Non-Mobile Broadband..." layers to cached layers to help with performance.</li>
+        <li>Temporarily remove the base map selector.</li>
     </ul>
     <h2>1.3.0 <small>Apr 24, 2015</small></h2>
     <ul>
-        <li>Improved layout for landscape phones (<a href='https://github.com/agrc/ironing-board/issues/81'>#81</a>).</li>
-        <li>Removed duplicate fiber providers in report (<a href='https://github.com/agrc/ironing-board/issues/80'>#80</a>).</li>
-        <li>Fixed bug preventing the "Enterprise Zones" checkbox from showing as disabled in built version (<a href='https://github.com/agrc/ironing-board/issues/79'>#79</a>).</li>
-        <li>Added code to track reports, and layer toggling in Google Analytics (<a href='https://github.com/agrc/ironing-board/issues/74'>#74</a>).</li>
-        <li>Fixed the footer layout in report (<a href='https://github.com/agrc/ironing-board/issues/77'>#77</a>).</li>
-        <li>Removed name & email from other broadband providers in report (<a href='https://github.com/agrc/ironing-board/issues/69'>#69</a>).</li>
+        <li>Improved layout for landscape phones.</li>
+        <li>Removed duplicate fiber providers in report.</li>
+        <li>Fixed bug preventing the "Enterprise Zones" checkbox from showing as disabled in built version.</li>
+        <li>Added code to track reports, and layer toggling in Google Analytics.</li>
+        <li>Fixed the footer layout in report.</li>
+        <li>Removed name & email from other broadband providers in report.</li>
     </ul>
     <h2>1.2.1 <small>Apr 14, 2015</small></h2>
     <ul>
@@ -65,27 +72,27 @@
     </ul>
     <h2>1.2.0 <small>Apr 13, 2015</small></h2>
     <ul>
-        <li>Added Front Runner lines and stations to Commuter Rail layer (<a href='https://github.com/agrc/ironing-board/issues/68'>#68</a>).</li>
-        <li>Reordered columns for broadband provider tables in report to help with column alignment (<a href='https://github.com/agrc/ironing-board/issues/69'>#69</a>).</li>
-        <li>Added "Natural Gas" as it's own section in the report (<a href='https://github.com/agrc/ironing-board/issues/70'>#70</a>).</li>
-        <li>Set all broadband layers to be on by default (<a href='https://github.com/agrc/ironing-board/issues/71'>#71</a>).</li>
-        <li>Layer visibility and map extent are now preserved via URL parameters (<a href='https://github.com/agrc/ironing-board/issues/75'>#75</a>).</li>
+        <li>Added Front Runner lines and stations to Commuter Rail layer.</li>
+        <li>Reordered columns for broadband provider tables in report to help with column alignment.</li>
+        <li>Added "Natural Gas" as it's own section in the report.</li>
+        <li>Set all broadband layers to be on by default.</li>
+        <li>Layer visibility and map extent are now preserved via URL parameters.</li>
     </ul>
     <h2>1.1.0 <small>Apr 7, 2015</small></h2>
     <ul>
-        <li>Converted to full screen layout (<a href='https://github.com/agrc/ironing-board/issues/67'>#67</a>).</li>
-        <li>Updated the text in the tooltip for the "Ask an expert!" icon (<a href='https://github.com/agrc/ironing-board/issues/72'>#72</a>).</li>
-        <li>Updated the logo (<a href='https://github.com/agrc/ironing-board/issues/73'>#73</a>).</li>
-        <li>Added "hamburger" icon for smaller devices (<a href='https://github.com/agrc/ironing-board/issues/64'>#64</a>).</li>
+        <li>Converted to full screen layout.</li>
+        <li>Updated the text in the tooltip for the "Ask an expert!" icon.</li>
+        <li>Updated the logo.</li>
+        <li>Added "hamburger" icon for smaller devices.</li>
     </ul>
     <h2>1.0.2 <small>Mar 6, 2015</small></h2>
     <ul>
-        <li>Better formatting and column alignment in report (<a href='https://github.com/agrc/ironing-board/issues/69'>#69</a>).</li>
-        <li>Moved search bar all of the way to the right of the page (<a href='https://github.com/agrc/ironing-board/issues/66'>#66</a>).</li>
+        <li>Better formatting and column alignment in report.</li>
+        <li>Moved search bar all of the way to the right of the page.</li>
     </ul>
     <h2>1.0.1 <small>Feb 23, 2015</small></h2>
     <ul>
-        <li>Fixed bug that was causing a limited number of features to display for the "Heavy Rail" layer at courser scales (<a href='https://github.com/agrc/ironing-board/issues/65'>#65</a>).</li>
+        <li>Fixed bug that was causing a limited number of features to display for the "Heavy Rail" layer at courser scales.</li>
     </ul>
 </body>
 </html>
