--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-2 <small>Feb 21, 2017</small></h2>
+    <ul>
+        <li>Added Sure Sites popup on click.</li>
+    </ul>
     <h2>1.7.0-1 <small>Feb 17, 2017</small></h2>
     <ul>
         <li>Build script to harvest SURE Sites data on a weekly basis.</li>
