--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-5 <small>Feb 27, 2017</small></h2>
+    <ul>
+        <li>Add SURE Sites-specific data to summary report page.</li>
+    </ul>
     <h2>1.7.0-4 <small>Feb 21, 2017</small></h2>
     <ul>
         <li>Pregenerated reports for SURE Sites (without the SURE Site-specific data yet).</li>
