--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,16 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-6 <small>Feb 28, 2017</small></h2>
+    <ul>
+        <li>Add Land Ownership overlay.</li>
+        <li>Add better loading text to dynamic reports.</li>
+        <li>Fix layer toggle URL parameters and incorporated SURE Sites layer.</li>
+        <li>Make sure that point layers are always on top of polygon layers.</li>
+        <li>Add expand icons to report group headers.</li>
+        <li>Fix layout issue with find address validate messages.</li>
+        <li>Add label for valid dates to Enterprise Zones layer at lower scales.</li>
+    </ul>
     <h2>1.7.0-5 <small>Feb 27, 2017</small></h2>
     <ul>
         <li>Add SURE Sites-specific data to summary report page.</li>
