good start on new left sidebar layout

--- a/lib/index.html
+++ b/lib/index.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <meta name="description" content="TODO" />
-    <meta name="keywords" content="TODO" />
+    <meta name="description" content="utah economic development map application used to help businesses find suitable locations" />
+    <meta name="keywords" content="utah, economic development" />
 
     <link rel="stylesheet" href="app/resources/App.css">
 
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
-<body class='claro'>
+<body>
     <div data-dojo-type='app/App'></div>
 
     <!-- build:template
