--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-8 <small>Mar 16, 2017</small></h2>
+    <ul>
+        <li>Convert main layout to new left side bar layout.</li>
+    </ul>
     <h2>1.7.0-6 <small>Feb 28, 2017</small></h2>
     <ul>
         <li>Add Land Ownership overlay.</li>
