--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,15 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-10 <small>Mar 20, 2017</small></h2>
+    <ul>
+        <li>Make footer links smaller and group into two lines.</li>
+        <li>Point search at ZoomLocations in SGID. This includes city, county, zip, place names, legislative districts, etc.</li>
+        <li>Hide find address text boxes on load and show them after the user clicks on the "Find Address" button.</li>
+        <li>Fix bug preventing the current location from showing/updating when clicking on a utility service polygon.</li>
+        <li>Increased the text size of the fonts in the side bar.</li>
+        <li>Hide current location header and icon on page load and show after the user has clicked on the map.</li>
+    </ul>
     <h2>1.7.0-9 <small>Mar 17, 2017</small></h2>
     <ul>
         <li>Add SURE Sites header to report.</li>
