--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.0-13 <small>Mar 29, 2017</small></h2>
+    <ul>
+        <li>Better Sure Sites, EDC, GOED and Broadband logos.</li>
+    </ul>
     <h2>1.7.0-12 <small>Mar 23, 2017</small></h2>
     <ul>
         <li>Add map attribution.</li>
