--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,12 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.1-14 <small>Apr 17, 2017</small></h2>
+    <ul>
+        <li>Switch Land Ownership land to point to web mercator SITLA service.</li>
+        <li>Added URLs for "ABOUT" & "CONTACT" links.</li>
+        <li>Moved city search from standalone widget on map to be integrated into the find address widget.</li>
+    </ul>
     <h2>1.7.0-13 <small>Mar 29, 2017</small></h2>
     <ul>
         <li>Better Sure Sites, EDC, GOED and Broadband logos.</li>
