--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,15 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>1.7.1-15 <small>Apr 18, 2017</small></h2>
+    <ul>
+        <li>Sort report drive times from shortest to longest.</li>
+        <li>Reorder report sections so that "Workforce" is first.</li>
+        <li>"UTAH SURE SITES" link changed to "SUBMIT A SURE SITE".</li>
+        <li>Decreased the size of the nav links.</li>
+        <li>Make the "Current Location" address match the geocoded address.</li>
+        <li>Fix bug causing "Required!" to show up in the street address text box when hitting enter in search box.</li>
+    </ul>
     <h2>1.7.1-14 <small>Apr 17, 2017</small></h2>
     <ul>
         <li>Switch Land Ownership land to point to web mercator SITLA service.</li>
