--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,11 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.0.0-0 <small>Apr 24, 2017</small></h2>
+    <ul>
+        <li>Move the current location info to a popup.</li>
+        <li>Move workforce down to between utilities and transportation on the report.</li>
+    </ul>
     <h2>1.7.1-15 <small>Apr 18, 2017</small></h2>
     <ul>
         <li>Sort report drive times from shortest to longest.</li>
