--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.0.0-1 <small>Apr 25, 2017</small></h2>
+    <ul>
+        <li>Fix "Add Non-Mobile Broadband..." layer checkbox layout issue on windows only.</li>
+    </ul>
     <h2>2.0.0-0 <small>Apr 24, 2017</small></h2>
     <ul>
         <li>Move the current location info to a popup.</li>
