--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,60 +13,23 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
-    <h2>2.0.0-1 <small>Apr 25, 2017</small></h2>
+    <h2>2.0.0 <small>May 1, 2017</small></h2>
     <ul>
         <li>Fix "Add Non-Mobile Broadband..." layer checkbox layout issue on windows only.</li>
-    </ul>
-    <h2>2.0.0-0 <small>Apr 24, 2017</small></h2>
-    <ul>
         <li>Move the current location info to a popup.</li>
-        <li>Move workforce down to between utilities and transportation on the report.</li>
-    </ul>
-    <h2>1.7.1-15 <small>Apr 18, 2017</small></h2>
-    <ul>
+        <li>Move workforce to be between utilities and transportation on the report.</li>
         <li>Sort report drive times from shortest to longest.</li>
-        <li>Reorder report sections so that "Workforce" is first.</li>
-        <li>"UTAH SURE SITES" link changed to "SUBMIT A SURE SITE".</li>
-        <li>Decreased the size of the nav links.</li>
         <li>Make the "Current Location" address match the geocoded address.</li>
-        <li>Fix bug causing "Required!" to show up in the street address text box when hitting enter in search box.</li>
-    </ul>
-    <h2>1.7.1-14 <small>Apr 17, 2017</small></h2>
-    <ul>
-        <li>Switch Land Ownership land to point to web mercator SITLA service.</li>
         <li>Added URLs for "ABOUT" & "CONTACT" links.</li>
-        <li>Moved city search from standalone widget on map to be integrated into the find address widget.</li>
-    </ul>
-    <h2>1.7.0-13 <small>Mar 29, 2017</small></h2>
-    <ul>
         <li>Better Sure Sites, EDC, GOED and Broadband logos.</li>
-    </ul>
-    <h2>1.7.0-12 <small>Mar 23, 2017</small></h2>
-    <ul>
         <li>Add map attribution.</li>
         <li>Hide mobile menu drop down on successful find address.</li>
-    </ul>
-    <h2>1.7.0-10 <small>Mar 20, 2017</small></h2>
-    <ul>
-        <li>Make footer links smaller and group into two lines.</li>
         <li>Point search at ZoomLocations in SGID. This includes city, county, zip, place names, legislative districts, etc.</li>
         <li>Hide find address text boxes on load and show them after the user clicks on the "Find Address" button.</li>
         <li>Fix bug preventing the current location from showing/updating when clicking on a utility service polygon.</li>
-        <li>Increased the text size of the fonts in the side bar.</li>
-        <li>Hide current location header and icon on page load and show after the user has clicked on the map.</li>
-    </ul>
-    <h2>1.7.0-9 <small>Mar 17, 2017</small></h2>
-    <ul>
-        <li>Add SURE Sites header to report.</li>
         <li>Responsive layout for mobile devices for both map and report.</li>
         <li>Fixed path to the group icons.</li>
-    </ul>
-    <h2>1.7.0-8 <small>Mar 16, 2017</small></h2>
-    <ul>
         <li>Convert main layout to new left side bar layout.</li>
-    </ul>
-    <h2>1.7.0-6 <small>Feb 28, 2017</small></h2>
-    <ul>
         <li>Add Land Ownership overlay.</li>
         <li>Add better loading text to dynamic reports.</li>
         <li>Fix layer toggle URL parameters and incorporated SURE Sites layer.</li>
@@ -74,34 +37,12 @@
         <li>Add expand icons to report group headers.</li>
         <li>Fix layout issue with find address validate messages.</li>
         <li>Add label for valid dates to Enterprise Zones layer at lower scales.</li>
-    </ul>
-    <h2>1.7.0-5 <small>Feb 27, 2017</small></h2>
-    <ul>
         <li>Add SURE Sites-specific data to summary report page.</li>
-    </ul>
-    <h2>1.7.0-4 <small>Feb 21, 2017</small></h2>
-    <ul>
         <li>Pregenerated reports for SURE Sites (without the SURE Site-specific data yet).</li>
         <li>Simplify and make the report closer to design mockups when printed.</li>
-    </ul>
-    <h2>1.7.0-2 <small>Feb 21, 2017</small></h2>
-    <ul>
-        <li>Added Sure Sites popup on click.</li>
-    </ul>
-    <h2>1.7.0-1 <small>Feb 17, 2017</small></h2>
-    <ul>
-        <li>Build script to harvest SURE Sites data on a weekly basis.</li>
-        <li>Replace "Sure Sites" text with logo in group header.</li>
         <li>Make all groups closed by default.</li>
-        <li>Improve layout between SURE Sites and Broadband groups.</li>
-        <li>Wire up SURE Sites filters to points on the map.</li>
-    </ul>
-    <h2>1.7.0-0 <small>Dec 23, 2016</small></h2>
-    <ul>
         <li>Add address points as base map overlay option.</li>
-        <li>Add orange marker to "Current Location" box.</li>
-        <li>Initial fleshing out of Sure Sites group and controls.</li>
-        <li>Add city search box on map.</li>
+        <li>Add SURE Sites data.</li>
     </ul>
     <h2>1.6.0 <small>Jul 7, 2016</small></h2>
     <ul>
