--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,13 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.1.0 <small>Jun 15, 2017</small></h2>
+    <ul>
+        <li>Change back to Lite for default base map.</li>
+        <li>Add PTAC layer.</li>
+        <li>Show Sure Sites by default.</li>
+        <li>Sure Sites: Hide filter controls when the "All" radio button is selected.</li>
+    </ul>
     <h2>2.0.0 <small>May 1, 2017</small></h2>
     <ul>
         <li>Fix "Add Non-Mobile Broadband..." layer checkbox layout issue on windows only.</li>
