--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.1.2 <small>Feb 17, 2018</small></h2>
+    <ul>
+      <li>Update URL to SITLA's new land ownership service.</li>
+    </ul>
     <h2>2.1.1 <small>Aug 14, 2017</small></h2>
     <ul>
       <li>Fix bug preventing HTTPS from working in production.</li>
