--- a/lib/index.html
+++ b/lib/index.html
@@ -16,16 +16,16 @@
     <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
 <body>
-    <div data-dojo-type='app/App'></div>
+    <div data-dojo-type="app/App"></div>
 
     <!-- build:template
     <script data-dojo-config="deps:['app/packages', 'app/run']" src='dojo/dojo.js'></script>
     /build -->
 
     <!-- build:remove -->
-    <script data-dojo-config="isDebug: 1" src='dojo/dojo.js'></script>
-    <script src='app/packages.js'></script>
-    <script src='app/run.js'></script>
+    <script data-dojo-config="isDebug: 1" src="dojo/dojo.js"></script>
+    <script src="app/packages.js"></script>
+    <script src="app/run.js"></script>
     <!-- /build -->
 
     <!-- GOOGLE ANALYTICS -->
