--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,11 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.2.0-0 <small>??</small></h2>
+    <ul>
+        <li>Add new "Qualified Opportunity Zones" layer to map and report (<a href="https://github.com/agrc/locate/issues/166">#166</a>).</li>
+        <li>Add backend changes to ensure users always get the latest version of the application (<a href="https://github.com/agrc/locate/issues/167">#167</a>).</li>
+    </ul>
     <h2>2.1.2 <small>Feb 17, 2018</small></h2>
     <ul>
       <li>Update URL to SITLA's new land ownership service.</li>
