--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,10 +13,13 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
-    <h2>2.2.1-0 <small>??, 2018</small></h2>
+    <h2>2.2.1-1 <small>??, 2018</small></h2>
     <ul>
         <li>Tweak map instructions and economy group name text.</li>
         <li>Turn off Sure Sites layer by default.</li>
+        <li>Re-order map categories (<a href="https://github.com/agrc/locate/issues/170">#170</a>).</li>
+        <li>Change summary report button text to be more descriptive (<a href="https://github.com/agrc/locate/issues/171">#171</a>).</li>
+        <li>Update "U" & "T" in Sure Sites logo to be more readable (<a href="https://github.com/agrc/locate/issues/172">#172</a>).</li>
     </ul>
     <h2>2.2.0 <small>Aug 7, 2018</small></h2>
     <ul>
