--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
-    <h2>2.2.1-1 <small>??, 2018</small></h2>
+    <h2>2.2.1 <small>Aug 30, 2018</small></h2>
     <ul>
         <li>Tweak map instructions and economy group name text.</li>
         <li>Turn off Sure Sites layer by default.</li>
