--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.3.0 <small>Sep 4, 2018</small></h2>
+    <ul>
+        <li>Change default base map from Lite to Terrain (<a href="https://github.com/agrc/locate/issues/174">#174</a>).</li>
+    </ul>
     <h2>2.2.1 <small>Aug 30, 2018</small></h2>
     <ul>
         <li>Tweak map instructions and economy group name text.</li>
