--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
-    <h2>2.4.0-0 <small>Feb 4, 2019</small></h2>
+    <h2>2.4.0 <small>Mar 12, 2019</small></h2>
     <ul>
         <li>Add historical (last two years) enterprise zone display options.</li>
     </ul>
