--- a/lib/report.html
+++ b/lib/report.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="app/resources/App.css">
     <link rel="stylesheet" href="app/resources/Report.css">
 
-    <link rel="shortcut icon" href="http://mapserv.utah.gov/cdn/images/favicon.ico"/>
+    <link rel="shortcut icon" href="https://mapserv.utah.gov/cdn/images/favicon.ico"/>
 </head>
 <body>
     <div data-dojo-type='app/Report'></div>
