fix: fix version number and syntax

--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -17,10 +17,10 @@
     <ul>
         <li>Increment Enterprise Zones dropdown year values.</li>
     </ul>
-    <h2>2.4.5 <small>Apr 20, 2021</small></h2>
+    <h2>2.4.6 <small>Apr 20, 2021</small></h2>
     <ul>
         <li>Remove broken footer links (<a href="https://github.com/agrc/locate/issues/205">#205</a>).</li>
-        <li>Remove SURE Sites (<a href="https://github.com/agrc/locate/issues/204>#204/a>).</li>
+        <li>Remove SURE Sites (<a href="https://github.com/agrc/locate/issues/204">#204</a>).</li>
     </ul>
     <h2>2.4.1 <small>Oct 3, 2019</small></h2>
     <ul>
