--- a/lib/index.html
+++ b/lib/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="app/resources/App.css">
 
-    <link rel="shortcut icon" href="https://mapserv.utah.gov/cdn/images/favicon.ico"/>
+    <link rel="shortcut icon" href="https://gis.utah.gov/images/favicon.ico"/>
 </head>
 <body>
     <div data-dojo-type="app/App"></div>
