--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.4.9 <small>Dec 2, 2021</small></h2>
+    <ul>
+        <li>Update GOED logos.</li>
+    </ul>
     <h2>2.4.8 <small>Oct 20, 2020</small></h2>
     <ul>
         <li>Fix bug causing some linked layer from being drawn (<a href="https://github.com/agrc/locate/issues/212">#212</a>) & (<a href="https://github.com/agrc/locate/issues/213">#213</a>).</li>
