chore: update change log

--- a/lib/ChangeLog.html
+++ b/lib/ChangeLog.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Economic Development Change Log</h1>
     <a href="./" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span> Back to the app</a>
+    <h2>2.4.10 <small>Jan 6, 2022</small></h2>
+    <ul>
+        <li>Increment Enterprise Zones dropdown year values (<a href="https://github.com/agrc/locate/issues/216">#216</a>).</li>
+    </ul>
     <h2>2.4.9 <small>Dec 2, 2021</small></h2>
     <ul>
         <li>Update GOED logos.</li>
