--- a/lib/index.html
+++ b/lib/index.html
@@ -40,7 +40,7 @@
         }
         gtag('js', new Date());
     
-        gtag('config', 'G-KZ0E7L0HNN', { debug_mode: window.location.hostname === 'localhost' });
+        gtag('config', 'G-KZ0E7L0HNN');
     </script>
 
     <!--BEGIN QUALTRICS WEBSITE FEEDBACK SNIPPET-->
