--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Broadband Economic Development Map</title>
+  <title>Economic Development Map</title>
 
   <!-- META TAGS -->
   <meta charset="UTF-8">
